--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,111 @@
-inherit_gem:
-    f_rubocop: default.yml
+require:
+  - rubocop-rspec
+  - rubocop-performance
+
+AllCops:
+  SuggestExtensions: false
+  NewCops: enable
+  CacheRootDirectory: tmp
+  Exclude:
+    - 'bin/**/*'
+    - '.git/**/*'
+
+##### LAYOUT #####
+
+Layout/FirstArrayElementIndentation:
+  Enabled: true
+  EnforcedStyle: consistent
+
+Layout/FirstHashElementIndentation:
+  Enabled: true
+  EnforcedStyle: consistent
+
+Layout/LineLength:
+  Max: 120
+  AllowedPatterns: ['(\A|\s)#']
+
+##### STYLE #####
+
+Style/PreferredHashMethods:
+  Enabled: true
+  Safe: false
+  EnforcedStyle: verbose
+
+Style/SymbolArray:
+  Enabled: true
+  EnforcedStyle: percent
+  MinSize: 3
+
+Style/WordArray:
+  Enabled: true
+  EnforcedStyle: percent
+  MinSize: 3
+
+Style/MultilineBlockChain:
+  Enabled: false
+
+Style/Lambda:
+  Enabled: true
+  EnforcedStyle: literal
+
+Style/LambdaCall:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
 
 Style/ClassAndModuleChildren:
+  Enabled: false
+
+##### LINT #####
+
+Lint/MissingSuper:
+  Enabled: false
+
+##### NAMING #####
+
+Naming/InclusiveLanguage:
+  Enabled: false
+
+Naming/PredicateName:
+  ForbiddenPrefixes:
+    - is_
+    - have_
+    # allows `has_` predicate
+
+###### METRICS #####
+
+Metrics/AbcSize:
+  Enabled: true
+  Max: 22
+
+Metrics/BlockLength:
+  Enabled: true
+  CountComments: false
+  Exclude:
+    - '**/*.gemspec'
+    - 'spec/**/*'
+
+Metrics/ClassLength:
+  Max: 200
+
+Metrics/MethodLength:
+  Enabled: true
+  CountAsOne: ['array', 'heredoc']
+  Max: 20
+
+##### RSPEC #####
+
+RSpec/ContextWording:
+  Prefixes:
+    - and
+    - but
+    - when
+    - with
+    - without
+
+RSpec/ExampleLength:
+  Max: 20
+
+RSpec/NestedGroups:
   Enabled: false
