Rubocop Issues: Fixes final adjustments

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -107,5 +107,12 @@ RSpec/ContextWording:
 RSpec/ExampleLength:
   Max: 20
 
+RSpec/FilePath:
+  CustomTransform:
+    FHTTPClient: f_http_client
+
+RSpec/MultipleMemoizedHelpers:
+  Enabled: false
+
 RSpec/NestedGroups:
   Enabled: false
