--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -27,7 +27,7 @@ jobs:
 
     # Add or replace any other lints here
     - name: Lint Ruby files
-      run: bin/rubocop -c .rubocop.yml --parallel
+      run: bundle exec rubocop -c .rubocop.yml --parallel
 
     - name: Run Rspec
       run: bundle exec rspec -fp
