Refactory: Replace configuration mode to be able to iheritance

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ require:
   - rubocop-performance
 
 AllCops:
+  TargetRubyVersion: 3.0
   SuggestExtensions: false
   NewCops: enable
   CacheRootDirectory: tmp
