Disable Gemspec/RequireMFA cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -119,3 +119,7 @@ RSpec/MultipleMemoizedHelpers:
 
 RSpec/NestedGroups:
   Enabled: false
+
+##### RUBYGEMS #####
+Gemspec/RequireMFA:
+  Enabled: false
