--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -37,6 +37,6 @@ jobs:
     - name: Archive coverage
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-report
+        name: coverage-report-${{ matrix.ruby }}
         path: coverage
         retention-days: 30
