--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,7 +19,7 @@ jobs:
           - '3.2.1'
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
@@ -35,8 +35,8 @@ jobs:
       run: bundle exec rspec -fp
 
     - name: Archive coverage
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: coverage-report
+        name: coverage-report-${{ matrix.ruby }}
         path: coverage
         retention-days: 30
